# pylazuli

./: .gitignore  .gitmodules  CMakeLists.txt  project.py  pyproject.toml  requirements.txt  test.py
PyLazuliLoader/: CMakeLists.txt  NaviPluginInterface.cpp  NaviPluginInterface.h  PyLazuliLoader.cpp  PyLazuliLoader.h
Test/: BaseNaviWidget.h  CMakeLists.txt  NaviPluginInterface.h  embed.cpp  plugin_loader.cpp  readme.md  wrappers.cpp
sip/: BaseNaviWidget.sip
sip/pylazuli/: pylazulimod.sip
